workspace/log/build_2024-12-07_13-49-28/template_drone_control/stderr.log
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In constructor ‘MultiDroneControl::MultiDroneControl()’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:79:40: error: no match for ‘operator=’ (operand types are ‘MultiDroneControl::Coords’ and ‘void’)
   79 |             droneCoords = get_coords(ns);
      |                                        ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:18:12: note: candidate: ‘constexpr MultiDroneControl::Coords& MultiDroneControl::Coords::operator=(const MultiDroneControl::Coords&)’
   18 |     struct Coords {
      |            ^~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:18:12: note:   no known conversion for argument 1 from ‘void’ to ‘const MultiDroneControl::Coords&’
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:18:12: note: candidate: ‘constexpr MultiDroneControl::Coords& MultiDroneControl::Coords::operator=(MultiDroneControl::Coords&&)’
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:18:12: note:   no known conversion for argument 1 from ‘void’ to ‘MultiDroneControl::Coords&&’
make[2]: *** [CMakeFiles/swaarm_control.dir/build.make:63: CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/swaarm_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
